# kodoneko

./: .gitignore  LICENSE.md  README.md  setup_paths.py
calibration/: README.md  _estimations.py  evaluate.py  regenerate_runs.py
calibration/dataset/: java_cases.jsonl  python_cases.jsonl  typescript_cases.jsonl
calibration/results/: run_001_defaults.md  run_002_revised_defaults.md  run_003_enriched_dataset.md  run_004_revised_levels.md
kodoneko_metrics/: README.md  pyproject.toml  run_tests.py
kodoneko_metrics/src/kodoneko_metrics/: __init__.py  _input.py  analyzer.py  detect.py  models.py
kodoneko_metrics/src/kodoneko_metrics/cosmic/: CONFIDENCE_INTERVAL_NOTES.md  DESIGN_DECISIONS.md  L9_CROSS_LANGUAGE_STATUS.md  OPTIMIZATION_NOTES.md  PEDAGOGIE_FUSION_EXITS.md  README.md  VALIDATION_REPORT.md  VALIDATION_REPORT_MANUAL.md  VALIDATION_REPORT_PYTHON.md  __init__.py  analysis_report.py  analyzer.py  html_formatter.py  models.py  table_formatter.py
kodoneko_metrics/src/kodoneko_metrics/cosmic/patterns/: __init__.py  _common.py  java.py  javascript.py  python_ast.py
kodoneko_metrics/tests/: _mock_tree_sitter.py  test_analysis_report.py  test_analyzer.py  test_cosmic.py  test_cosmic_java.py  test_cosmic_js.py
kodoneko_scanner/: LICENSE  README.md  pyproject.toml  run_tests.py
kodoneko_scanner/src/kodoneko_scanner/: __init__.py  __main__.py  cli.py  config.py  interpret.py  models.py  scanner.py
kodoneko_scanner/tests/: test_config.py  test_scanner.py
kodoneko_temporal/: README.md  pyproject.toml  run_tests.py
kodoneko_temporal/src/kodoneko_temporal/: __init__.py  cosmic_delta.py  git_extract.py  models.py  temporal_engine.py  windowing.py
kodoneko_temporal/tests/: test_cosmic_delta.py  test_temporal.py  test_windowing.py
notebooks/: 00_index.ipynb  01_lines.ipynb  02_halstead.ipynb  03_mccabe.ipynb  04_understandability.ipynb  05_primary_quality_score.ipynb  07_cosmic.ipynb
