[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kodoneko-temporal"
version = "0.4.0"
description = "Analyse temporelle des métriques (COSMIC, qualité) sur l'historique git."
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [{ name = "Benoît Moraillon" }]
requires-python = ">=3.10"
dependencies = ["kodoneko-metrics >= 2.10.0", "kodoneko-scanner >= 0.10.0"]

[tool.setuptools.packages.find]
where = ["src"]
